tests/tuples/ttypedesc_in_tuple_a.nim
discard """
errormsg: "typedesc not allowed as tuple field."
"""

var bar = (a: int, b: 1)
